[tool.poetry]
name = "supplement-hybrid-stable-rnn"
version = "0.1.2"
description = "Reproduction code for our paper 'Physics Residual-Bounded LSTM for Safe Vehicle State Prediction.'"
authors = ["Alexandra Baier <alx.baier@gmail.com>"]
packages = [{include = "pbrl", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
deepsysid = {git = "https://github.com/AlexandraBaier/deepsysid", branch="hybrid_model_update"}
torch = "^1.11.0"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
jupyter = "^1.0.0"
tikzplotlib = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
